Add Core Version 0
added backend with speech to text, gpt, and text to speech

API call from frontend to backend

Add a new page.

changed how pages work, so it's easier add more pages in the future

Add temp look to Audio page

Add backend media support

--- a/language/src/frontend/home/home.html
+++ b/language/src/frontend/home/home.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     <script defer src="{% static 'js/app.js' %}"></script>
-    
 </head>
 <body>
 <header id="header">
@@ -39,7 +37,7 @@
             <span class="hover-letter">e</span>
         </h1>
         <p>Changing how you learn</p>
-        <a href="#" class="cta-button">Start Learning</a>
+        <a class="cta-button" href="{% url 'learning' %}">Start Learning</a>
     </div>
 </header>
 
